네트워크 정리

--- a/2026-01/2026-01-07.md
+++ b/2026-01/2026-01-07.md
@@ -4,108 +4,236 @@
 
 ### 📝 배운 내용 (Today I Learned)
 
-- 클라이언트 - 서버 모델
+- 네트워크(Network)
 ```
-Client - Server Model : 요청(Request), 응답(Response)의 반복으로 이루어짐
-통신 방식 : 요청 -> 처리 -> 응답
-장점 : 중앙 관리, 보안, 일관성
-단점 : 단일 장애점(SPOF:잠재적 단일 장애 지점:한 부분의 실패가 전체 시스템의 중단을 초래하는 요소)
+네트워크 : 여러 통신 장치가 데이터를 주고받기 위해 논리,물리적으로 연결된 구조
+LAN : Local Area Network : 라우터 및 스위치와 같은 커넥터를 사용하여 물리적으로 가까운 디바이스를 연결하는 근거리 통신망 (내부망)
+WAN : Wide Area Network : 독립된 네트워크의 집합(LAN,MAN,VPC,VPN 등)을 라우팅를 통해 연결한 네트워크 (외부망)
 ```
-- DNS (Domain Name System)
+- 로드밸런서 (Load Balancer)
 ```
-인간이 식별하기 힘든 IP 주소(192.168.0.1 같은..)를 naver.com 과 같이 식별하기 쉬운 문자로 접근할 수 있음
-브라우저: naver.com 입력 > DNS 서버: 도메인 IP(203.0.113.10,예시임) 반환 > 브라우저: 해당 IP로 접속
-DNS의 이점 :
-1. 가용성 : 장애 우회 (Server A 다운 -> Server B IP 응답)
-2. 트래픽 분산 : DNS 기반 로드 분산
-3. 성능 : 지리 기반 라우팅을 통한 Latency 감소
-4. 보안 : IP 은닉, DDos완화
-5. 운영 편의성 : 인프라 변경이 쉬움
-7. 확장성 : 다중 리전, 멀티 클라우드, 글로벌 서비스 
+Load : 부하, 트래픽 , Balancer : 균형을 맞추는 장치
+Load Balancer : 서버에 걸리는 부하를 여러 서버에 균등하게 분배한다
+1. 트래픽 분배
+다수의 클라이언트의 요청을 로드밸런서를 통해 다수의 서버로 분산시키는 방식으로 작동
+2. 장애 허용(Fault Tolerance)
+특정 서버에 장애가 발생하면 로드밸런서는 해당 서버를 제외하고 다른 서버로 요청을 보냄으로써, 서비스 중단을 방지함
+3. 확장성 지원(Scalability)
+서버 수를 늘려도 로드밸런서가 자동으로 새 서버를 트래픽 분배에 포함시킨다
+> 트래픽이 증가하더라도 유연하게 대처 가능하다
+4. 성능 최적화
+로드밸런서는 주기적인 "Health Check" 하여 과부화 상태에 있는 서버로 요청을 보내지 않으며 서버의 자원을 최대한 효율적으로 활용함.
 ```
-- IP == IP Address == IPv4
+- 로드밸런서 라우팅 알고리즘
 ```
-IP(Internet Protocol)는 네트워크에서 장치를 식별하고 데이터가 목적지까지 전달되도록 경로를 지정하는 통신 규약
-IP 주소 : 네트워크 상 장치를 구분하기 위한 논리적 주소
+1. 라운드 로빈(Round Robin) : 순차적으로 서버에 요청을 분배합니다 / 단순, 공평 / 서버 성능차이 고려 X
+2. 최소 연결 수(Least Connections) : 현재 연결된 사용자가 가장 적은 서버로 요청을 분배합니다
+3. 가중치 기반(Weighted) : 성능이 좋은 서버에 더 많은 요청을 분배합니다
+4. 지연시간 기반 (Latency-based) : 
+```
+- 인터네트워킹 (Inter-Networking)
+```
+네트워크 규모를 확장 시키는 방법
+1. 단일 네트워크의 규모를 계속해서 확장하는 법
+2. 크지 않은 여러 개의 네트워크를 묶어서 확장하는 법
+Inter-Networking은 2번째 방법을 일컷는 말
+
+장점
+1. 한 네트워크의 혼잡이나 정체가 다른 네트워크에 영향을 주지 않는다
+2. 각 네트워크를 독립적으로 관리할 수 있다
+3. 한 네트워크의 장애가 다른 네트워크에 미치는 영향이 "적다"
+인터네트워킹에 사용되는 프로토콜 : TCP/IP
+```
+- CDN : Content Delivery Network
+```
+CDN : 전 세계에 분산된 서버가 웹 사용자에게 더 빠르고 가까운 곳에서 콘텐츠를 효율적으로 전달하는 네트워크
+대규모 웹사이트, 스트리밍 서비스, 온라인 게임 등 다양한 분야에서 사용되며 사용자 경험을 개선하고 서버의 부하를 줄이는데 사용됨.
+1️⃣ 사용자의 콘텐츠 요청
+2️⃣ 가장 가까운 Edge 서버가 응답
+3️⃣ Cache에 있으면 바로 제공
+4️⃣ 없다면 Origin 서버에서 가져와 캐시 후 제공
+```
+- 서브넷 : Sub-Network
+```
+서브넷 : 하나의 네트워크 대역을 내부의 작은 네트워크로 나눈 것
+✔ 왜 쓰나?
+1️⃣ 네트워크 관리 용이
+2️⃣ 보안 분리 (접근 통제)
+3️⃣ 트래픽 효율화
+| 구분     | 퍼블릭 서브넷 | 프라이빗 서브넷 |
+| ------- | ---------- | ---------- |
+| 인터넷연결 | ⭕        | ❌         |
+| 공인 IP  | 가능       | 불가        |
+| 용도     | 웹 서버     | DB, 내부 서버 |
+| 라우팅    | IGW 연결   | NAT 통해 간접 |
 
 ```
-- Port
+- CIDR : Classless Inter-Domain Routing 넌 나중에 다시 패주마..
 ```
-특정 IP 내에서 통신할 프로세스를 식별하기위한 식별자
+Classless : 더이상 고정된 IP주소 클래스(A, B, C)를 사용하지 않는다
+Inter-Domain : 여러 네트워크 또는 도메인 간에서 효율적인 라우팅을 지원한다
+Routing : 데이터를 올바를 네트워크로 전달하기 위한 경로를 설정하는 작업
+✔ 왜 CIDR를 쓰나? : IP를 bit 단위로 나눠 네트워크를 유연하게 설계하는 방식이다.
+1. 클래스 A/B/C 한계 극복
+2. IP 주소 낭비 감소
+3. 서브넷 크기 자유롭게 조절
+/16 = 큰 네트워크 , /24 = 일반 사내망 , /28 = 소규모 서버망 (예시임 결국 실제 크기는 2^(32-CIDR)
 ```
-- HTTP : HyperText Transfer Protocol
+- IP 할당 기법: 네트워크 상에서 장치들에게 고유한 주소를 부여하는 밥업들을 말함.
 ```
-웹에서 브라우저와 서버가 데이터를 주고받기위한 프로토콜
+고정 IP 할당 (Static IP Allocation, 정적 IP 할당)
+- 관리자가 네트워크의 각 장치에 수동으로 고정된 IP 주소를 직접 설정하는 방식
+- IP주소가 변경되지 않고 항상 동일하게 유지
+- IP 주소가 고정되어 있기 때문에 네트워크 상에서 위치를 취적하기 쉬움
+- 홈 서버로 구성한 서비스의 경우 재부팅을 해도 DB주소, 웹서버 주소등이 변하지 안도록 일관성을 보장할 수 있음
+장점
+1. 중요한 장치에 대한 안정적인 연결 보장
+2. 포트 포워딩이나 서버 설정에 유리
+단점
+1. 설정 과정이 번거로울 수 있음.
+2. IP 충돌 가능성 존재(사람이 하기 때문...)
 ```
-- Protocol
 ```
-웹에서 브라우저와 서버가 데이터를 주고받기위한 프로토콜
-```
-- HTTP Method
-```
-HTTP Request에 쓰이는 메서드(POST, GET, PUT, PATCH, DELETE 등)
-```
-- HTTP Status Code
-```
-클라이언트의 요청을 어떻게 처리했는지 표시해주는 코드
-(200:요청 성공, 201:리소스 생성/400:잘못된요청,401:권한없음,404:not found 등등..)
-```
-- REST
-```
-URI를 통해 자원을 명시하고 HTTP Method를 통해 데이터를 처리하는 등 웹에서 클라이언트와 서버가 일관된 규칙을 따르도록 설계된 인터페이스
-REST(Representational State Transfer) 원칙을 따르는 API로 HTTP 프로토콜을 사용해 자원(Resource)을 주고받는 방식
-자원(Resource) : URL로 표현, 명사 형태 사용
-| 메서드    | 의미    | 예시          |
-| ------- | ------ | ------------ |
-| GET     |   조회  | 사용자 목록 조회 |
-| POST    |   생성  | 사용자 등록     |
-| PUT     | 전체수정 | 사용자 정보 수정 |
-| PATCH   | 부분수정 | 이메일 수정     |
-| DELETE  |   삭제  | 사용자 삭제     |
+동적 IP 할당(Dynamic IP Allocation)
+IP주소를 수동으로 설정하지 않고, 네트워크가 필요할 때마다 자동으로 DHCP(Dynamic Host Confiquration protocol) 서버를 통해 IP주소를 할당하는 방식
+1️⃣ Discover
+클라이언트: “IP 주세요!” (브로드캐스트)
+2️⃣ Offer
+DHCP 서버: “이 IP 써도 돼”
+3️⃣ Request
+클라이언트: “그 IP 쓸게요”
+4️⃣ ACK
+서버: “확정!” (임대 시작)
 
-표현(Representation) : 자원의 상태를 JSON, XML 등으로 표현, 요즘은 거의 JSON
-{
-  "id": 1,
-  "name": "Jeongmin",
-  "email": "test@test.com"
-}
+✔ 왜 동적 IP를 쓰나?
+1. IP 주소 절약
+2. 관리 자동화
+3. 사용자 증가에 유연 대응
+👉 대규모 네트워크에서 필수
+```
+```
+| 구분    | 동적 IP      | 정적 IP       |
+| ------ | ----------- | ------------ |
+| 설정    | 자동         | 수동          |
+| 관리    | 편함         | 번거로움       |
+| IP 고정 | ❌          | ⭕           |
+| 사용처   | PC,  모바일  | 서 버, 네트워크 |
 
-요청 흐름
-1. Client가 URL + HTTP 메서드로 요청
-2. Server가 요청 처리
-3. 상태 코드 + JSON 응답 반환
+```
+- 라우팅 : 데이터가 네트워크에서 목적지까지 전달되기 위해 경로를 설정하는 과정 (=개념)
+```
+라우팅은 개념적 프로세스 이며 라우팅 테이블을 기반으로 동작한다.(라우터와 게이트웨이가 수행)
+```
+- 게이트웨이(Gateway) : 네트워크 간 출입구 역할을 하는 장치 또는 설정
+```
+역할
+1. 내부 네트워크와 외부 네트워크를 연결
+2. 데이터를 다른 네트워크로 전달(라우팅 포함)
+3. 경우에 따라 프로토콜 변환, 데이터 번역 등의 추가 작업 수행
+특징
+1. 보통 라우터가 게이트웨이 역할을 하지만, 다른 장치도 게이트웨이가 될 수 있음(예 : 방화벽, 프록시 서버)
+```
+- 라우터 : 라우팅을 수행하는 네트워크 장치
+```
+역할 : 네트워크 간 데이터를 전달하고, 최적 경로를 선택하여 데이터를 목적지로 이동
+특징
+1. 라우팅 테이블을 기반으로 데이터를 전달
+2. 네트워크를 연결하고 경로를 최적화
+3. 게이트웨이 역할을 겸할 수 도 있음
+```
+- 라우팅테이블 : 데이터 패킷을 어디로 보낼지 결정하는 데 사용하는 데이터 베이스
+```
+역할
+1. 데이터 패킷의 목적지를 확인
+2. 라우팅 테이블에서 가장 적합한 경로를 찾음
+3. 선택된 경로로 데이터 패킷을 전달
+경로 결정 기준
+1. Longest Prefix Match (가장 긴 접두어 매칭)
+목적지 IP가 192.168.1.5라면 경로1. 192.168.0.0/16  경로2. 192.168.1.0/24  < 경로 2번 선택!
+2. Metric(메트릭)
+동일한 접두어 길이가 여러 개 있다면 Metric 값을 사용하여 경로를 결정
+메트릭은 경로의 비용을 나타내며 - 일반적으로 다음 요소에 따라 계산됩니다
+    - 홉 수 (Hop Count): 중간 라우터를 몇 개 지나야 하는지
+    - 대역폭: 경로의 가용 대역폭
+    - 지연 시간(Latency): 경로를 통과하는 데 걸리는 시간.
+    - 신뢰도(Reliability): 경로의 안정성
+- **규칙 →** 메트릭 값이 낮을수록 더 적합한 경로로 간주됩니다.
+```
+- 라우팅테이블 구성요소
+```
+1. 목적지 네트워크(Destination Network)
+- 데이터가 전달되어야하는 최종 목적지의 네트워크 주소
+- 예 : 192.168.1.0/24(IP주소 범위와 서브넷)
+2. 서브넷 마스크(Subnet Mask)
+- 목적지 네트워크의 범위를 정합니다.
+- 예 : 255.255.255.0 or /24
+3. 게이트웨이(Gateway)
+- 데이터를 전송할 물리적 또는 가상 네트워크 인터페이스
+- 예 : eth0 , wlan0 > 한마디로 와이파이로 나가냐 유선랜으로 나가냐 같이 어떤 네트워크장비인지 나타냄
+4. 메트릭(Metric)
+- Money
+```
+- 프록시 (Proxy)
+```
+개념 : 클라이언트를 대신하여 인터넷 서버에 요청을보냄
+-> 서버 입장에서는 진짜 클라이언트가 누군지 알 수 없음
+목적
+1. 익명성 보장
+2. 접근 제어
+3. 캐싱
+4. 보안
 
-🔹 REST의 6가지 설계 원칙 (중요 ⭐)
-1️⃣ Client-Server 분리
-2️⃣ Stateless (무상태성)
-3️⃣ Cacheable
-4️⃣ Uniform Interface
-5️⃣ Layered System
-6️⃣ Code on Demand (선택)
-```
-- API
-```
-서로 다른 소프트웨어 시스템과 통신하기 위해 따라야하는 규칙
-```
-- JSON
-```
-데이터를 저장하고 전송하기 위한 텍스트 기반의 데이터 형식 (2차원)
-```
-- 직렬화 — Serialization
-```
-복잡하게 얽힌 데이터 구조를 일렬화 하여 저장하거나 전송할 수 있는 형태로 만드는 것
-```
-- 역직렬화 — Deserialization
-```
-JSON 문자열을 파싱하여 프로그램 언어의 자료구조로 바꾸는 과정 
-```
-- LAN / WAN
-```
-LAN: 라우터 및 스위치와 같은 커넥터를 사용하여 물리적으로 가까운 디바이스를 연결하는 근거리 통신망 / WAN: 독립된 네트워크의 집합(LAN,MAN,VPC,VPN 등)을 라우팅를 통해 연결한 네트워크
-```
+💡 주요 활용 예
+회사 내부 인터넷 통제
+학교/기관 유해 사이트 차단
+IP 숨김 (익명 접속)
 
+✅ 특징 요약
+클라이언트 보호
+클라이언트에 프록시 설정 필요
+서버는 프록시만 인식
+```
+- 리버스 프록시 (Reverse Proxy)
+```
+Server를 대신해서 클라이언트 요청을 처리
+클라이언트는 프록시가 서버인줄 앎
+클라이언트 -> 리버스 프록시 -> 실제 서버
+
+🎯 목적
+서버 보안 강화
+부하 분산
+SSL 처리
+성능 향상 (캐싱, 로드밸런싱 등 더많은데 알려니까 어렵다..)
+
+🧠 동작 방식
+클라이언트 요청 수신
+리버스 프록시가 내부 서버 중 하나로 전달
+응답을 받아 클라이언트에게 반환
+
+💡 주요 활용 예
+웹 서비스 앞단 (Nginx, Apache)
+로드 밸런서
+API Gateway
+
+✅ 목적 요약
+1, 로드밸런싱
+2. 보안 강화
+3. 캐싱
+4. SSL 종단
+5. 단일 진입점
+
+리버스 프록시를 구현한 서비스 종류
+1. **NGINX**
+    고성능 리버스 프록시 서버로 자주 사용됩니다.
+2. **Apache HTTP Server**
+    NGINX와 유사한 기능을 제공하며 다양한 설정을 지원합니다. 
+3. **HAProxy** 
+    고성능의 로드 밸런싱과 리버스 프록시를 제공합니다.  
+4. **AWS의 Application Load Balancer**   
+    클라우드 환경에서 리버스 프록시로 동작하며 트래픽을 관리합니다.
+```
 ## 💭 오늘의 회고 (Retrospective)
 
-- **Keep (좋았던 점)**: 복습하는 과정이라 따라가기 어렵지 않았음 
-- **Problem (아쉬웠던 점)**: 컨디션이 좋지않아 집중하기 힘들었음 
-- **Try (시도할 점)**: 도서관 뿌수기
+- **Keep (좋았던 점)**: 일찍자서 컨디션이 좋았따
+- **Problem (아쉬웠던 점)**: 놉
+- **Try (시도할 점)**: 오늘도 일찍자기 
